--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <div class="container">
     <h1>Bear Made</h1>
-    
+     <h3>I am a work in progress</h3>
     <div class="list-group">
      
       <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="bearmade" data-color="#000000" data-emoji="🐻"  data-font="Lato" data-text="feed me :)" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>    
